Add 'main' content.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       </nav>
     </header>
     <main>
+      <img src="./img/banner.jpg" alt="Students studying">
+      <div class="headline">
+        <h1>Learn something new every day</h1>
+        <h4>orem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+        <a class="button">Start Here</a>
+      </div>
     </main>
+
   </body>
 </html>
