Some 'campus' section content.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
         <a class="button">Start Here</a>
       </div>
     </main>
+    <section class="campus">
+      <div class="maj-cont">
+        <img src="./img/information-main.jpg" alt="Student reading a book">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur.</p>
+        <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+      <div class="info-block">
 
+      </div>
+      <div class="info-block">
+
+      </div>
+      <div class="info-block">
+
+      </div>
+    </section
   </body>
 </html>
