--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <header>
       <nav>
-
         <ul>
           <li><a href="/index.html" title="Colmar Academy Home"><img src="img/ic-logo.svg" alt="Colmar Academy Logo"></a></li>
           <li><a href="/index.html">Colmar<span>Academy</span></a></li>
@@ -22,20 +21,19 @@
           <li><a href="#">Sign In</a></li>
         </ul>
 
-        <ul class="mobile">
+        <ul class="mob">
           <li><a href="#"><img src="#" alt="#"></a></li>
           <li><a href="#"><img src="#" alt="#"></a></li>
           <li><a href="#"><img src="#" alt="#"></a></li>
           <li><a href="#"><img src="#" alt="#"></a></li>
         </ul>
-
       </nav>
     </header>
     <main>
       <img src="./img/banner.jpg" alt="Students studying">
       <div class="headline">
         <h1>Learn something new every day</h1>
-        <h4>orem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+        <h3>orem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         <a class="button">Start Here</a>
       </div>
     </main>
@@ -47,12 +45,26 @@
         <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
       <div class="info-block">
+        <img src="./img/information-orientation.jpg" alt="Students walking on path" class="wdscrn">
+        <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
+        <h3>Orientation Date</h3>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        <p><a href="#" title="Orientation information">Read More</a>
+      </div>
+      <div class="info-block">
+        <img src="./img/information-campus.jpg" alt="Campus study cafe" class="wdscrn">
+        <img src="./img/information-campus-mobile.jpg" alt="Students study cafe" class="mob">
+        <h3>Our Campus</h3>
+        <p>Find which campus is close by you</p>
+        <p><a href="#" title="Campus information">Read More</a>
 
       </div>
       <div class="info-block">
-
-      </div>
-      <div class="info-block">
+        <img src="./img/information-guest-lecture.jpg" alt="Guest speaker" class="wdscrn">
+        <img src="./img/information-guest-lecture-mobile.jpg" alt="Guest speaker" class="mob">
+        <h3>Our guest lecture</h3>
+        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+        <p><a href="#" title="More guest speakers">Read More</a>
 
       </div>
     </section
