'Majors' section content.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+    <!--Navigation-->
     <header>
       <nav>
         <ul>
@@ -29,6 +30,8 @@
         </ul>
       </nav>
     </header>
+
+    <!--Main Section-->
     <main>
       <img src="./img/banner.jpg" alt="Students studying">
       <div class="headline">
@@ -37,6 +40,8 @@
         <a class="button">Start Here</a>
       </div>
     </main>
+
+    <!--Campus Info Section-->
     <section class="campus">
       <div class="maj-cont">
         <img src="./img/information-main.jpg" alt="Student reading a book">
@@ -67,6 +72,54 @@
         <p><a href="#" title="More guest speakers">Read More</a>
 
       </div>
-    </section
+    </section>
+
+    <!--Courses Section-->
+    <section class="majors">
+      <h2>Start Learning</h2>
+      <div class="container">
+        <div class="course-box">
+          <img src="./img/course-software.jpg" alt="Desktop computers">
+          <h3>Software Engineering</h3>
+          <h4>Course</h4>
+          <p>Web Development, Mobile Development, iOT, APIs</p>
+        </div>
+
+        <div class="course-box">
+          <img src="./img/course-computer-art.jpg" alt="iPhone">
+          <h3>Computer Art</h3>
+          <h4>Course</h4>
+          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+        </div>
+
+        <div class="course-box">
+          <img src="./img/course-design.jpg" alt="Photographer">
+          <h3>Design</h3>
+          <h4>Course</h4>
+          <p>User Experience Design, User Research, Visual Design</p>
+        </div>
+
+        <div class="course-box">
+          <img src="./img/course-data.jpg" alt="Data visualization on laptop">
+          <h3>Data</h3>
+          <h4>Course</h4>
+          <p>Data Science, Big Data, SQL, Data Visualization</p>
+        </div>
+
+        <div class="course-box">
+          <img src="./img/course-business.jpg" alt="Chess">
+          <h3>Business</h3>
+          <h4>Course</h4>
+          <p>Product Development, Business Development, Startup</p>
+        </div>
+
+        <div class="course-box">
+          <img src="./img/course-marketing.jpg" alt="Interacting with smartwatch">
+          <h3>Marketing</h3>
+          <h4>Course</h4>
+          <p>Analytics, Content Marketing, Mobile Marketing</p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
