'Thesis' section content.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
     </section>
 
-    <!--Courses Section-->
+    <!--Majors Section-->
     <section class="majors">
       <h2>Start Learning</h2>
       <div class="container">
@@ -119,6 +119,26 @@
           <h4>Course</h4>
           <p>Analytics, Content Marketing, Mobile Marketing</p>
         </div>
+      </div>
+    </section>
+
+    <!--Thesis Section-->
+    <section class="thesis">
+      <h2>Thesis exhibit</h2>
+      <div class="maj-cont">
+        <video src="./vid/thesis.mp4" autoplay loop muted>
+        <h3>Reimagine urban</h3>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+      </div>
+      <div class="info-block">
+        <img src="./img/thesis-fisma.jpg" alt="Prototyping">
+        <h3>Fisma: Design and Prototype</h3>
+        <p>Designer showcase of new prototype product</p>
+      </div>
+      <div class="info-block">
+        <img src="./img/thesis-now-and-then.jpg" alt="New York City skyline">
+        <h3>Now and then</h3>
+        <p>Research about New York</p>
       </div>
     </section>
   </body>
