--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="./img/information-orientation.jpg" alt="Students walking on path" class="wdscrn">
         <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
         <h3>Orientation Date</h3>
-        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
         <p><a href="#" title="Orientation information">Read More</a>
       </div>
       <div class="info-block">
@@ -89,7 +89,7 @@
           <img src="./img/course-computer-art.jpg" alt="iPhone">
           <h3>Computer Art</h3>
           <h4>Course</h4>
-          <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
         </div>
 
         <div class="course-box">
@@ -141,5 +141,11 @@
         <p>Research about New York</p>
       </div>
     </section>
+
+    <!--Footer-->
+    <footer>
+      <p>&copy; 2016 Colmar Academy. All rights reserved</p>
+      <p><a href="#" title="Terms of Service">Terms</a>   <a href="#" title="Privacy Policy">Privacy</a>
+    </footer>
   </body>
 </html>
