--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <title>Colmar Academy</title>
     <link type="text/css" rel="stylesheet" href="./css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <!--Navigation-->
     <header>
+      <div class="logo">
+        <img src="img/ic-logo.svg" alt="Colmar Academy Logo">
+        <a href="/index.html" title="Colmar Academy Home">Colmar<span>Academy</span></a></li>
+      </div>
       <nav>
-        <ul>
-          <li><a href="/index.html" title="Colmar Academy Home"><img src="img/ic-logo.svg" alt="Colmar Academy Logo"></a></li>
-          <li><a href="/index.html">Colmar<span>Academy</span></a></li>
-        </ul>
-
         <ul>
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
