--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <!--Main Section-->
     <main>
-      <img src="./img/banner.jpg" alt="Students studying">
-      <div class="headline">
-        <h1>Learn something new every day</h1>
-        <h3>orem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-        <a class="button">Start Here</a>
-      </div>
+        <img src="./img/banner.jpg" alt="Students studying">
+        <div class="headline">
+          <h1>Learn something new every day</h1>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+          <a class="button" href="#">Start Here</a>
+        </div>
     </main>
 
     <!--Campus Info Section-->
@@ -126,7 +126,7 @@
     <section class="thesis">
       <h2>Thesis exhibit</h2>
       <div class="maj-cont">
-        <video src="./vid/thesis.mp4" autoplay loop muted>
+        <!--<video src="./vid/thesis.mp4" autoplay loop muted>-->
         <h3>Reimagine urban</h3>
         <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
       </div>
