--- a/index.html
+++ b/index.html
@@ -43,34 +43,40 @@
 
     <!--Campus Info Section-->
     <section class="campus">
-      <div class="maj-cont">
+      <div class="left">
         <img src="./img/information-main.jpg" alt="Student reading a book">
         <h2>It doesn't hurt to keep practicing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur.</p>
         <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
-      <div class="info-block">
-        <img src="./img/information-orientation.jpg" alt="Students walking on path" class="wdscrn">
-        <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
-        <h3>Orientation Date</h3>
-        <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
-        <p><a href="#" title="Orientation information">Read More</a>
-      </div>
-      <div class="info-block">
-        <img src="./img/information-campus.jpg" alt="Campus study cafe" class="wdscrn">
-        <img src="./img/information-campus-mobile.jpg" alt="Students study cafe" class="mob">
-        <h3>Our Campus</h3>
-        <p>Find which campus is close by you</p>
-        <p><a href="#" title="Campus information">Read More</a>
-
-      </div>
-      <div class="info-block">
-        <img src="./img/information-guest-lecture.jpg" alt="Guest speaker" class="wdscrn">
-        <img src="./img/information-guest-lecture-mobile.jpg" alt="Guest speaker" class="mob">
-        <h3>Our guest lecture</h3>
-        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-        <p><a href="#" title="More guest speakers">Read More</a>
-
+      <div class="right">
+        <div class="info-block">
+          <img src="./img/information-orientation.jpg" alt="Students walking on path" class="wdscrn">
+          <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
+          <div class="text-container">
+            <h3>Orientation Date</h3>
+            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+            <p><a href="#" title="Orientation information">Read More</a>
+          </div>
+        </div>
+        <div class="info-block">
+          <img src="./img/information-campus.jpg" alt="Campus study cafe" class="wdscrn">
+          <img src="./img/information-campus-mobile.jpg" alt="Students study cafe" class="mob">
+          <div class="text-container">
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <p><a href="#" title="Campus information">Read More</a>
+          </div>
+        </div>
+        <div class="info-block">
+          <img src="./img/information-guest-lecture.jpg" alt="Guest speaker" class="wdscrn">
+          <img src="./img/information-guest-lecture-mobile.jpg" alt="Guest speaker" class="mob">
+          <div class="text-container">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+            <p><a href="#" title="More guest speakers">Read More</a>
+          </div>
+        </div>
       </div>
     </section>
 
