Style 'majors' section.

--- a/index.html
+++ b/index.html
@@ -83,47 +83,59 @@
     <!--Majors Section-->
     <section class="majors">
       <h2>Start Learning</h2>
-      <div class="container">
+      <div class="flex-container">
         <div class="course-box">
           <img src="./img/course-software.jpg" alt="Desktop computers">
-          <h3>Software Engineering</h3>
-          <h4>Course</h4>
-          <p>Web Development, Mobile Development, iOT, APIs</p>
+          <div class="text-container">
+            <h3>Software Engineering</h3>
+            <h4>Course</h4>
+            <p>Web Development, Mobile Development, iOT, APIs</p>
+          </div>
         </div>
 
         <div class="course-box">
           <img src="./img/course-computer-art.jpg" alt="iPhone">
-          <h3>Computer Art</h3>
-          <h4>Course</h4>
-          <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+          <div class="text-container">
+            <h3>Computer Art</h3>
+            <h4>Course</h4>
+            <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
+          </div>
         </div>
 
         <div class="course-box">
           <img src="./img/course-design.jpg" alt="Photographer">
-          <h3>Design</h3>
-          <h4>Course</h4>
-          <p>User Experience Design, User Research, Visual Design</p>
+          <div class="text-container">
+            <h3>Design</h3>
+            <h4>Course</h4>
+            <p>User Experience Design, User Research, Visual Design</p>
+          </div>
         </div>
 
         <div class="course-box">
           <img src="./img/course-data.jpg" alt="Data visualization on laptop">
-          <h3>Data</h3>
-          <h4>Course</h4>
-          <p>Data Science, Big Data, SQL, Data Visualization</p>
+          <div class="text-container">
+            <h3>Data</h3>
+            <h4>Course</h4>
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
         </div>
 
         <div class="course-box">
           <img src="./img/course-business.jpg" alt="Chess">
-          <h3>Business</h3>
-          <h4>Course</h4>
-          <p>Product Development, Business Development, Startup</p>
+          <div class="text-container">
+            <h3>Business</h3>
+            <h4>Course</h4>
+            <p>Product Development, Business Development, Startup</p>
+          </div>
         </div>
 
         <div class="course-box">
           <img src="./img/course-marketing.jpg" alt="Interacting with smartwatch">
-          <h3>Marketing</h3>
-          <h4>Course</h4>
-          <p>Analytics, Content Marketing, Mobile Marketing</p>
+          <div class="text-container">
+            <h3>Marketing</h3>
+            <h4>Course</h4>
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
         </div>
       </div>
     </section>
