Style 'thesis' section.

--- a/index.html
+++ b/index.html
@@ -143,20 +143,31 @@
     <!--Thesis Section-->
     <section class="thesis">
       <h2>Thesis exhibit</h2>
-      <div class="maj-cont">
-        <!--<video src="./vid/thesis.mp4" autoplay loop muted>-->
-        <h3>Reimagine urban</h3>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
-      </div>
-      <div class="info-block">
-        <img src="./img/thesis-fisma.jpg" alt="Prototyping">
-        <h3>Fisma: Design and Prototype</h3>
-        <p>Designer showcase of new prototype product</p>
-      </div>
-      <div class="info-block">
-        <img src="./img/thesis-now-and-then.jpg" alt="New York City skyline">
-        <h3>Now and then</h3>
-        <p>Research about New York</p>
+      <div class="flex-container">
+        <div class="left">
+          <video autoplay loop muted>
+            <source src="./vid/thesis.mp4" type="video/mp4">
+            <p>Unfortunately your browser does not support HTML5 video.</p>
+          </video>
+          <h3>Reimagine urban</h3>
+          <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+        </div>
+        <div class="right">
+          <div class="info-block">
+            <img src="./img/thesis-fisma.jpg" alt="Prototyping">
+            <div class="text-container">
+              <h3>Fisma: Design and Prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+          </div>
+          </div>
+          <div class="info-block">
+            <img src="./img/thesis-now-and-then.jpg" alt="New York City skyline">
+            <div class="text-container">
+              <h3>Now and then</h3>
+              <p>Research about New York</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
