--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <!--Footer-->
     <footer>
       <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-      <p><a href="#" title="Terms of Service">Terms</a>   <a href="#" title="Privacy Policy">Privacy</a>
+      <p><a href="#" title="Terms of Service">Terms</a> &nbsp; &nbsp; &nbsp; <a href="#" title="Privacy Policy">Privacy</a>
     </footer>
   </body>
 </html>
