--- a/index.html
+++ b/index.html
@@ -10,24 +10,23 @@
   <body>
     <!--Navigation-->
     <header>
-      <div class="logo">
+      <div class="logo desktop">
         <img src="img/ic-logo.svg" alt="Colmar Academy Logo">
         <a href="/index.html" title="Colmar Academy Home">Colmar<span>Academy</span></a></li>
       </div>
-      <nav>
+      <nav ul class="desktop">
         <ul>
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">For Companies</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
-
-        <ul class="mob">
-          <li><a href="#"><img src="#" alt="#"></a></li>
-          <li><a href="#"><img src="#" alt="#"></a></li>
-          <li><a href="#"><img src="#" alt="#"></a></li>
-          <li><a href="#"><img src="#" alt="#"></a></li>
-        </ul>
+      </nav>
+      <nav class="mob">
+        <a href="#"><img src="./img/ic-logo.svg" alt="Colmar Academy"></a>
+        <a href="#"><img src="./img/ic-on-campus.svg" alt="On Campus"></a>
+        <a href="#"><img src="./img/ic-online.svg" alt="Online"></a>
+        <a href="#"><img src="./img/ic-login.svg" alt="Login"></a>
       </nav>
     </header>
 
