'Campus' section mobile.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       <div class="right">
         <div class="info-block">
-          <img src="./img/information-orientation.jpg" alt="Students walking on path" class="wdscrn">
+          <img src="./img/information-orientation.jpg" alt="Students walking on path" class="desktop">
           <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
           <div class="text-container">
             <h3>Orientation Date</h3>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="info-block">
-          <img src="./img/information-campus.jpg" alt="Campus study cafe" class="wdscrn">
+          <img src="./img/information-campus.jpg" alt="Campus study cafe" class="desktop">
           <img src="./img/information-campus-mobile.jpg" alt="Students study cafe" class="mob">
           <div class="text-container">
             <h3>Our Campus</h3>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="info-block">
-          <img src="./img/information-guest-lecture.jpg" alt="Guest speaker" class="wdscrn">
+          <img src="./img/information-guest-lecture.jpg" alt="Guest speaker" class="desktop">
           <img src="./img/information-guest-lecture-mobile.jpg" alt="Guest speaker" class="mob">
           <div class="text-container">
             <h3>Our guest lecture</h3>
