Fix .campus .info-block .text-container width issue @535. Add mobile only content in Majors section. Initial mobile styling in Majors.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </main>
 
-    <!--Campus Info Section-->
+    <!--Campus Section-->
     <section class="campus">
       <div class="left">
         <img src="./img/information-main.jpg" alt="Student reading a book">
@@ -136,6 +136,14 @@
             <p>Analytics, Content Marketing, Mobile Marketing</p>
           </div>
         </div>
+      </div>
+      <div class="mob">
+        <h3>Software Engineering</h3>
+        <h3>Computer Art</h3>
+        <h3>Design</h3>
+        <h3>Data</h3>
+        <h3>Business</h3>
+        <h3>Marketing</h3>
       </div>
     </section>
 
