--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Colmar Academy</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" href="./css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./css/style.css">
@@ -181,7 +184,7 @@
     <!--Footer-->
     <footer>
       <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-      <p><a href="#" title="Terms of Service">Terms</a> &nbsp; &nbsp; &nbsp; <a href="#" title="Privacy Policy">Privacy</a>
+      <p class="terms"><a href="#" title="Terms of Service">Terms</a> &nbsp; &nbsp; &nbsp; <a href="#" title="Privacy Policy">Privacy</a>
     </footer>
   </body>
 </html>
