--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Colmar Academy</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -13,18 +13,20 @@
   <body>
     <!--Navigation-->
     <header>
-      <div class="logo desktop">
+      <div class="logo desktop" role="presentation">
         <img src="img/ic-logo.svg" alt="Colmar Academy Logo">
-        <a href="/index.html" title="Colmar Academy Home">Colmar<span>Academy</span></a></li>
+        <a href="/index.html" title="Colmar Academy Home">Colmar<span>Academy</span></a>
       </div>
-      <nav ul class="desktop">
-        <ul>
+      <nav class="desktop">
+        <ul role="presentation">
           <li><a href="#">On Campus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">For Companies</a></li>
           <li><a href="#">Sign In</a></li>
         </ul>
       </nav>
+
+      <!--Mobile Only-->
       <nav class="mob">
         <a href="#"><img src="./img/ic-logo.svg" alt="Colmar Academy"></a>
         <a href="#"><img src="./img/ic-on-campus.svg" alt="On Campus"></a>
@@ -36,7 +38,7 @@
     <!--Main Section-->
     <main>
         <img src="./img/banner.jpg" alt="Students studying">
-        <div class="headline">
+        <div class="headline" role="presentation">
           <h1>Learn something new every day</h1>
           <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
           <a class="button" href="#">Start Here</a>
@@ -45,13 +47,13 @@
 
     <!--Campus Section-->
     <section class="campus">
-      <div class="left">
+      <div class="left" role="presentation">
         <img src="./img/information-main.jpg" alt="Student reading a book">
         <h2>It doesn't hurt to keep practicing</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam sollicitudin condimentum eros in lobortis. Donec eget ligula in mi blandit efficitur.</p>
         <p class="credit">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
-      <div class="right">
+      <div class="right" role="presentation">
         <div class="info-block">
           <img src="./img/information-orientation.jpg" alt="Students walking on path" class="desktop">
           <img src="./img/information-orientation-mobile.jpg" alt="Students walking on path" class="mob">
@@ -140,6 +142,9 @@
           </div>
         </div>
       </div>
+
+      <!--Mobile Only-->
+      <!-- TODO: Add jQuery touch accordian -->
       <div class="mob">
         <h3>Software Engineering</h3>
         <h3>Computer Art</h3>
@@ -153,8 +158,8 @@
     <!--Thesis Section-->
     <section class="thesis">
       <h2>Thesis exhibit</h2>
-      <div class="flex-container">
-        <div class="left">
+      <div class="flex-container" role="presentation">
+        <div class="left" role="complementary">
           <video autoplay loop muted>
             <source src="./vid/thesis.mp4" type="video/mp4">
             <p>Unfortunately your browser does not support HTML5 video.</p>
@@ -162,7 +167,7 @@
           <h3>Reimagine urban</h3>
           <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
         </div>
-        <div class="right">
+        <div class="right" role="presentation">
           <div class="info-block">
             <img src="./img/thesis-fisma.jpg" alt="Prototyping">
             <div class="text-container">
@@ -184,7 +189,7 @@
     <!--Footer-->
     <footer>
       <p>&copy; 2016 Colmar Academy. All rights reserved</p>
-      <p class="terms"><a href="#" title="Terms of Service">Terms</a> &nbsp; &nbsp; &nbsp; <a href="#" title="Privacy Policy">Privacy</a>
+      <p class="terms"><a href="#" title="Terms of Service">Terms</a> &nbsp; &nbsp; <a href="#" title="Privacy Policy">Privacy</a>
     </footer>
   </body>
 </html>
